--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
 }
 
 .main {
+	
 }
 
 .jumbotron {
@@ -23,4 +24,10 @@ body {
 
 	/* sets the default gray color of jumbotron to transparent */
 	background-color: transparent;
+}
+
+@media only screen and (max-width: 440px) {
+	h1 {
+		font-size: 12vw !important;
+	}
 }
