edits disclaimer and adds some styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+	background-color: brown;
 	background-image: url(../images/chess-bg.jpg);
 	/* background-repeat: no-repeat; */
 	color: #FFFFFF;
